--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -1,63 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/home_page_Layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:id="@+id/home_page_Layout">
+    android:background="#1976D2"
+    android:orientation="vertical">
 
-    <Spinner
-
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/organizationListSpinner"
-        android:spinnerMode="dropdown" />
+        android:background="#2196F3"
+        android:minHeight="?attr/actionBarSize">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/home_complaintHeadET"
-        android:id="@+id/home_complaintHeadET" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:hint="@string/home_complaintET"
-       android:gravity="start"
-        android:id="@+id/home_complaintET" />
-
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Complaint Registration"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#FFFFFF" />
+    </android.support.v7.widget.Toolbar>
 
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/home_inner_layout"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:layout_weight="1">
-        <Button
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        android:layout_width="0dp"
-            android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:text="attach button"
-        android:id="@+id/button3" />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_weight="1"
+        <Spinner
+            android:id="@+id/organizationListSpinner"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="camera button"
-            android:id="@+id/button2"
-          />
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
 
+            android:paddingBottom="20dp"
+            android:paddingTop="20dp"
+            android:spinnerMode="dropdown" />
+
+        <EditText
+            android:id="@+id/home_complaintHeadET"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#FFFFFF"
+            android:hint="@string/home_complaintHeadET"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#E6E6E6" />
+
+        <EditText
+            android:id="@+id/home_complaintET"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            android:backgroundTint="#FFFFFF"
+            android:gravity="start"
+            android:hint="@string/home_complaintET"
+            android:textColor="#FFFFFF"
+            android:textColorHint="#E6E6E6" />
+
+
+        <LinearLayout
+            android:id="@+id/home_image_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+
+            <ImageView
+                android:id="@+id/home_attach"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:padding="17dp"
+                android:src="@mipmap/attach_icon" />
+
+            <ImageView
+                android:id="@+id/home_camera"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:src="@mipmap/camera_icon" />
+
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="submit button" />
     </LinearLayout>
-
-
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="submit button"
-        android:id="@+id/button"
-        android:layout_gravity="center_horizontal" />
-
 </LinearLayout>
