--- a/app/src/main/res/layout/login_xml.xml
+++ b/app/src/main/res/layout/login_xml.xml
@@ -5,9 +5,11 @@
 
 
     <Spinner
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/spinner"
+        android:hint="select an option"
+        android:textColorHint="#FF0000"
         android:textColor="@android:color/white"
         android:prompt="@string/login_spinner_title"
 
