--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -34,10 +34,9 @@
         <Spinner
             android:id="@+id/organizationListSpinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             android:spinnerMode="dropdown" />
@@ -63,7 +62,40 @@
             android:hint="@string/home_complaintET"
             android:textColor="#FFFFFF"
             android:textColorHint="#E6E6E6" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="#2196F3"
+            android:layout_height="wrap_content"
 
+            android:id="@+id/imageView5">
+            <ImageView
+                android:layout_width="0dp"
+                android:padding="5dp"
+                android:layout_height="90dp"
+                android:layout_weight="1"
+                android:src="@mipmap/a"
+                android:id="@+id/imageView"
+                />
+
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:padding="5dp"
+                android:layout_height="90dp"
+                android:src="@mipmap/b"
+                android:id="@+id/imageView2" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:src="@mipmap/c"
+                android:layout_weight="1"
+                android:padding="5dp"
+                android:layout_height="90dp"
+                android:id="@+id/imageView3" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/home_image_layout"
