--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -26,7 +26,8 @@
     <LinearLayout
         android:id="@+id/home_inner_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="6"
         android:gravity="center_vertical"
         android:orientation="vertical"
         android:padding="10dp">
@@ -62,21 +63,22 @@
             android:hint="@string/home_complaintET"
             android:textColor="#FFFFFF"
             android:textColorHint="#E6E6E6" />
+    </LinearLayout>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_marginTop="10dp"
             android:background="#2196F3"
-            android:layout_height="wrap_content"
-
+            android:layout_height="0dp"
+            android:layout_weight="2"
             android:id="@+id/imageView5">
             <ImageView
                 android:layout_width="0dp"
                 android:padding="5dp"
                 android:layout_height="90dp"
                 android:layout_weight="1"
-                android:src="@mipmap/a"
-                android:id="@+id/imageView"
+
+                android:id="@+id/home_compalintImg1"
                 />
 
 
@@ -86,7 +88,7 @@
                 android:padding="5dp"
                 android:layout_height="90dp"
                 android:src="@mipmap/b"
-                android:id="@+id/imageView2" />
+                android:id="@+id/home_compalintImg2"/>
 
             <ImageView
                 android:layout_width="0dp"
@@ -94,7 +96,7 @@
                 android:layout_weight="1"
                 android:padding="5dp"
                 android:layout_height="90dp"
-                android:id="@+id/imageView3" />
+                android:id="@+id/home_compalintImg3" />
         </LinearLayout>
 
         <LinearLayout
@@ -110,6 +112,8 @@
                 android:id="@+id/home_attach"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:onClick=""
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:padding="17dp"
@@ -118,6 +122,8 @@
             <ImageView
                 android:id="@+id/home_camera"
                 android:layout_width="0dp"
+                android:clickable="true"
+
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
@@ -125,12 +131,19 @@
 
         </LinearLayout>
 
-
+    <LinearLayout
+        android:id="@+id/home_submit_Button_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
         <Button
-            android:id="@+id/button"
+            android:id="@+id/home_submitBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="submit button" />
-    </LinearLayout>
+        </LinearLayout>
+
 </LinearLayout>
