--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -21,6 +21,13 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textColor="#FFFFFF" />
     </android.support.v7.widget.Toolbar>
+    <ProgressBar
+        android:id="@+id/pbHeaderProgress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="2" >
+    </ProgressBar>
 
 
     <LinearLayout
@@ -41,6 +48,8 @@
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             android:spinnerMode="dropdown" />
+
+
 
         <EditText
             android:id="@+id/home_complaintHeadET"
@@ -64,6 +73,7 @@
             android:textColor="#FFFFFF"
             android:textColorHint="#E6E6E6" />
     </LinearLayout>
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
