--- a/app/src/main/res/layout/status_viewer_page.xml
+++ b/app/src/main/res/layout/status_viewer_page.xml
@@ -17,6 +17,10 @@
             android:textColor="#FFFFFF" />
         </android.support.v7.widget.Toolbar>
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView" />
 
 
 </LinearLayout>
