status page created and loaded

--- a/app/src/main/res/layout/status_viewer_page.xml
+++ b/app/src/main/res/layout/status_viewer_page.xml
@@ -6,10 +6,19 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@mipmap/status_list_head"
+        android:background="#2196F3"
         android:minHeight="?attr/actionBarSize">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Complaint Status"
+            android:textColor="#FFFFFF"
+            android:id="@+id/textView6" />
 
-        </android.support.v7.widget.Toolbar>
+
+    </android.support.v7.widget.Toolbar>
+
 
     <ListView
         android:layout_width="match_parent"
