--- a/app/src/main/res/layout/status_viewer_page.xml
+++ b/app/src/main/res/layout/status_viewer_page.xml
@@ -11,6 +11,11 @@
 
         </android.support.v7.widget.Toolbar>
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/statusviewerLV"
+        android:layout_gravity="center_horizontal" />
 
 
 </LinearLayout>
