home screen exit created

--- a/app/src/main/res/menu/menu_splash_screen.xml
+++ b/app/src/main/res/menu/menu_splash_screen.xml
@@ -1,11 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".Splash_screen">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/status" android:title="View Status"
         android:orderInCategory="100" app:showAsAction="never"
         />
 
-
+<item android:id="@+id/about" android:title="About us"
+    android:orderInCategory="100" app:showAsAction="never"/>
 
 
 </menu>
